--- a/package.json
+++ b/package.json
@@ -15,6 +15,17 @@
     "next": "13.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.32.5",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
+    "@types/papaparse": "^5.3.7",
+    "papaparse": "^5.4.1",
+    "react-dropzone": "^14.2.3",
+    "react-router-dom": "^6.15.0"
   }
 }
