--- a/package.json
+++ b/package.json
@@ -19,11 +19,18 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@anzp/azure-function-multipart": "^3.1.0",
+    "@azure/storage-blob": "^12.15.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
+    "@types/formidable": "^3.4.1",
+    "@types/multer": "^1.4.7",
+    "@types/multiparty": "^0.0.33",
     "@types/papaparse": "^5.3.7",
+    "multer": "^1.4.5-lts.1",
+    "multiparty": "^4.2.3",
     "papaparse": "^5.4.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.15.0"
