--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/papaparse": "^5.3.7",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
+    "next-auth": "^4.23.1",
     "papaparse": "^5.4.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.15.0"
